# avr-meson-sample

./: .clangd  LICENSE  README.md  avr-atmega328pb.txt  changelog.md  firmware.elf  meson.build
.cache/clangd/index/: main.c.3C19D18320851500.idx
src/: firmware.elf  main.c
